--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
+
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
+    compile 'com.android.support:support-v4:25.3.0'
     testCompile 'junit:junit:4.12'
 }
