--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3'
     compile 'com.github.chrisbanes:PhotoView:2.0.0'
+    compile 'com.github.lingochamp:FileDownloader:v1.7.1'
     testCompile 'junit:junit:4.12'
 }
