fix full screen fix wrong book position fix download notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
 
         <service
             android:name=".services.DownloadService"
-            android:exported="false"></service>
+            android:exported="false" />
+
     </application>
 
 </manifest>
