--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ntk.ehcrawler">
+    package="com.ntk">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,41 +13,48 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".ehcrawler.activities.MainActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+
+        <service
+            android:name=".ehcrawler.services.DatabaseService"
+            android:exported="false" />
+
+        <provider
+            android:name=".ehcrawler.database.BookProvider"
+            android:authorities="com.ntk.ehcrawler.providers"
+            android:enabled="true"
+            android:exported="false" />
+
+        <activity
+            android:name=".ehcrawler.activities.GalleryActivity"
+            android:label=""
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ehcrawler.activities.FullscreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label=""
+            android:theme="@style/FullscreenTheme" />
+        <activity
+            android:name=".ehcrawler.activities.SearchActivity"
+            android:label="@string/title_activity_search" />
+
+        <service
+            android:name=".ehcrawler.services.DownloadService"
+            android:exported="false" />
+
+        <activity android:name=".reactor.ReactorActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <service
-            android:name=".services.DatabaseService"
-            android:exported="false" />
-
-        <provider
-            android:name=".database.BookProvider"
-            android:authorities="com.ntk.ehcrawler.providers"
-            android:enabled="true"
-            android:exported="false" />
-
-        <activity
-            android:name=".activities.GalleryActivity"
-            android:label=""
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".activities.FullscreenActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label=""
-            android:theme="@style/FullscreenTheme" />
-        <activity
-            android:name=".activities.SearchActivity"
-            android:label="@string/title_activity_search" />
-
-        <service
-            android:name=".services.DownloadService"
-            android:exported="false" />
-
     </application>
 
 </manifest>
