--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 27
     buildToolsVersion '27.0.3'
     defaultConfig {
-        applicationId "com.ntk.ehcrawler"
+        applicationId "com.ntk.reactor"
         minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
@@ -26,14 +26,19 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'org.jsoup:jsoup:1.10.2'
-    implementation 'com.android.support:appcompat-v7:25.3.1'
-    implementation 'com.android.support:cardview-v7:25.3.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:25.3.1'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.android.support:support-v4:25.3.1'
-    implementation 'com.android.support:support-vector-drawable:25.3'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:support-vector-drawable:27.1.1'
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     implementation 'com.github.lingochamp:FileDownloader:v1.7.1'
+    implementation 'com.felipecsl:gifimageview:2.2.0'
+    implementation 'com.koushikdutta.ion:ion:2.2.1'
+    implementation 'jp.wasabeef:picasso-transformations:2.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     testImplementation 'junit:junit:4.12'
 }
