--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,10 @@
         </activity>
         <activity android:name=".reactor.ReactorContentActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
+            android:name=".reactor.SearchActivity"
+            android:label="@string/title_activity_search" />
     </application>
 
 </manifest>
