--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,13 @@
         <!-- <service -->
         <!-- android:name=".ehcrawler.services.DownloadService" -->
         <!-- android:exported="false" /> -->
+        <!--<activity android:name=".reactor.TestActivity">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
         <activity android:name=".reactor.ReactorActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -66,6 +72,7 @@
         <activity
             android:name=".reactor.SearchActivity"
             android:label="@string/title_activity_search" />
+
     </application>
 
 </manifest>
